--- a/goldenPage/app/css/style.css
+++ b/goldenPage/app/css/style.css
@@ -66,7 +66,7 @@ html {
 .header__headline {
   position: absolute;
   color: #fff;
-  margin-top: -23.75rem;
+  top: 17.25rem;
   z-index: 1;
 }
 .header__subtitle {
@@ -89,7 +89,7 @@ html {
 .header__button {
   position: absolute;
   text-align: center;
-  margin-top: -11.3rem;
+  margin-top: -150px;
   width: 66.6%;
   z-index: 1;
 }
@@ -574,6 +574,10 @@ html {
   .header__bg {
     height: 80vh;
   }
+  .header__headline {
+    margin-top: -100px;
+    margin-left: -40px;
+  }
   .portfolio {
     -webkit-box-pack: justify;
     -webkit-justify-content: space-between;
@@ -592,7 +596,10 @@ html {
 }
 @media screen and (max-width: 600px) {
   html {
-    font-size: 60%;
+    font-size: 70%;
+  }
+  .header__headline {
+    margin-left: -90px;
   }
   .navigation__burg {
     display: block;
@@ -634,11 +641,15 @@ html {
 }
 @media screen and (max-width: 420px) {
   html {
-    font-size: 50%;
+    font-size: 60%;
   }
   .header__bg {
     background-image: url('../img/mobile.jpg');
     -webkit-background-size: cover;
             background-size: cover;
+  }
+  .header__headline {
+    margin-top: -50px;
+    margin-left: -40px;
   }
 }
