--- a/goldenPage/app/less/style.less
+++ b/goldenPage/app/less/style.less
@@ -574,4 +574,25 @@ html {
             margin-left:-40px;
         }
     }
+    .services {
+        flex-direction: column;
+        align-items: center;
+        &__item{
+            width:100%;
+            margin:0;
+        }
+    }
+    .services__item:last-child {
+        width:100%;
+    }
+    .command {
+        flex-direction:column;
+        align-items: center;
+    }
+    .footer {
+        flex-direction:column;
+        &__copy{
+            margin-bottom:1.25rem;
+        }
+    }
 }
