--- a/goldenPage/app/css/style.css
+++ b/goldenPage/app/css/style.css
@@ -652,4 +652,43 @@ html {
     margin-top: -50px;
     margin-left: -40px;
   }
+  .services {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .services__item {
+    width: 100%;
+    margin: 0;
+  }
+  .services__item:last-child {
+    width: 100%;
+  }
+  .command {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer__copy {
+    margin-bottom: 1.25rem;
+  }
 }
