--- a/goldenPage/app/less/style.less
+++ b/goldenPage/app/less/style.less
@@ -568,6 +568,7 @@ html {
         &__bg {
         background-image:url('../img/mobile.jpg');
         background-size:cover;
+        height:100vh;
         }
         &__headline {
             margin-top:-50px;
@@ -588,6 +589,9 @@ html {
     .command {
         flex-direction:column;
         align-items: center;
+        &__center {
+            width:100%;
+        }
     }
     .footer {
         flex-direction:column;
