--- a/testForAdamant/app/css/main.css
+++ b/testForAdamant/app/css/main.css
@@ -22,50 +22,206 @@ html {
   font-size: 100%;
   font-family: 'Roboto', sans-serif;
 }
-.header__bg {
-  background-image: url('../img/header-img.jpg');
-  max-width: 100%;
+.header {
+  background: url('../img/header-after-img.png') no-repeat bottom, url('../img/header-img.jpg') no-repeat center top / cover;
   height: 100vh;
-  background-size: cover;
-  background-repeat: no-repeat;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
 }
 .header__wrap {
   max-width: 1170px;
   margin: 0 auto;
+  padding: 20px;
 }
 .header__top {
-  position: absolute;
-  top: 20px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .header__title {
   font-size: 1.875rem;
   color: #fefefe;
-  width: 411px;
-  margin-left: 246px;
-  margin-right: 111px;
+  width: 435px;
+  margin-left: 100px;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
+}
+.header__main {
+  text-align: center;
+  max-width: 830px;
+  margin: 38px auto 0 auto;
+}
+.header__parag {
+  font-size: 2.25rem;
+  padding: 0 25px;
+  font-weight: bold;
+  color: #ffd21f;
+}
+.header__suptitle {
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: normal;
+  margin: 31px 0 70px 0;
+}
+.header__suptitle--bold {
+  font-weight: bold;
+}
+.header__suptitle--line {
+  text-decoration: underline;
 }
 .button {
-  width: 270px;
+  width: 260px;
   height: 60px;
+  padding-left: 5px;
+  padding-right: 5px;
   text-align: center;
   line-height: 60px;
   border-radius: 5px;
+  word-wrap: wrap none;
+  cursor: pointer;
+}
+.button__btn {
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+}
+.button--call {
   -webkit-box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.2);
           box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.2);
   background-image: -webkit-gradient(linear, left top, left bottom, from(#ffd21f), to(#e4751c));
   background-image: -o-linear-gradient(top, #ffd21f, #e4751c);
   background-image: linear-gradient(to bottom, #ffd21f, #e4751c);
 }
-.button__call {
-  text-decoration: none;
-  color: #fff;
+.button--discount {
+  -webkit-box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.2);
+          box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.2);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#a2d417), to(#4c9918));
+  background-image: -o-linear-gradient(top, #a2d417, #4c9918);
+  background-image: linear-gradient(to bottom, #a2d417, #4c9918);
+}
+.columns {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 20px;
+  text-align: center;
+  max-width: 820px;
+  margin: 0 auto;
+}
+.columns__left {
+  width: 390px;
+  margin-right: 100px;
+}
+.columns__right {
+  width: 330px;
+  background: #fff;
+  border-radius: 5px;
+}
+.columns__item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5px;
+  background: #ffd21f;
+  margin-bottom: 15px;
+  border-radius: 50px 10px 10px 50px;
+}
+.columns__circle {
+  min-width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background: #fff;
+  color: #ffd21f;
+  line-height: 70px;
+  font-size: 24px;
+  font-weight: bold;
+}
+.columns__plus {
+  margin-left: 15px;
+  text-align: start;
+  color: #222;
+  font-size: 16px;
+}
+.discount {
+  padding: 30px 35px;
+}
+.discount__parag {
+  font-size: 20px;
+  text-align: center;
+  color: #222;
+  margin-bottom: 18px;
+}
+.discount__row {
+  width: 260px;
+  height: 60px;
+  padding: 0 15px;
+  border-radius: 5px;
+  background-color: #f7f7f7;
+  margin-bottom: 15px;
+  background: url(../img/phone.svg) no-repeat 220px center;
+}
+.user {
+  background: url(../img/user.svg) no-repeat 220px center;
+}
+.phone {
+  background: url(../img/phone.svg) no-repeat 220px center;
+}
+@media screen and (max-width: 780px) {
+  html {
+    font-size: 80%;
+  }
+  .header {
+    background: url('../img/header-img.jpg') no-repeat center top / cover;
+  }
+  .header__top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .header__logo {
+    margin-bottom: 47px;
+    margin-left: -40px;
+    width: 84px;
+    height: 45px;
+  }
+  .header__title {
+    margin-bottom: 25px;
+    margin-left: 0;
+    width: 320px;
+  }
+  .columns {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .columns__left {
+    margin: 0;
+  }
 }
