--- a/testForAdamant/app/less/main.less
+++ b/testForAdamant/app/less/main.less
@@ -4,60 +4,186 @@
     margin:0;
     padding:0;
 }
-
 html {
     font-size:100%;
     font-family: 'Roboto', sans-serif;
 }
-
-// background-image: url('/img/header-img.jpg') ;
-// max-width: 100%;
-// height:100vh;
-// background-size: cover;
-// background-repeat:no-repeat;    
-
-
 .header {
-    &__bg {
-        background-image: url('/img/header-img.jpg') ;
-        max-width: 100%;
-        height:100vh;
-        background-size: cover;
-        background-repeat:no-repeat; 
-        position: absolute;
-        top:0;left:0;bottom:0;right:0;
+    background: 
+    url('../img/header-after-img.png') no-repeat bottom,
+    url('../img/header-img.jpg') no-repeat center top / cover;
+    height:100vh;
+    &__wrap{
+        max-width:1170px;
+        margin:0 auto;
+        padding:20px;  
     }
-   &__wrap {
-       max-width:1170px;
-       margin:0 auto;
-   }
-   &__top {
-       position: absolute;
-       top:20px;
-       display:flex;
-   }
-   &__title{
-       font-size:1.875rem;
-       color:#fefefe;
-       width:411px;
-       margin-left:246px;
-       margin-right:111px;
-       
-   }
+    &__top {
+        display:flex;
+        justify-content: space-between;
+    }
+    &__title{
+        font-size:1.875rem;
+        color:#fefefe;
+        width:435px;
+        margin-left:100px;
+        padding-left:10px; 
+        padding-right: 10px; 
+        text-align:center; 
+    }
+    &__main {
+        text-align: center;
+        max-width:830px;
+        margin:38px auto 0 auto;
+    }
+    &__parag {
+        font-size: 2.25rem;
+        padding:0 25px;
+        font-weight: bold;
+        color: #ffd21f;
+    }
+    &__suptitle{
+        color:#fff;
+        font-size:1.5rem;
+        font-weight: normal;
+        margin:31px 0 70px 0;
+    }
+    &__suptitle--bold{
+        font-weight: bold;
+    }
+    &__suptitle--line{
+        text-decoration: underline;
+    }
 }
-
-
 .button {
-    width:270px;
+    width:260px;
     height:60px;
+    padding-left:5px;
+    padding-right:5px;
     text-align:center;
     line-height:60px;
     border-radius: 5px;
-    box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.2);
-    background-image: linear-gradient(to bottom, #ffd21f, #e4751c);
-    &__call {
+    word-wrap: wrap none;
+    cursor: pointer;
+    &__btn {
         text-decoration:none;
         color:#fff;
+        font-size:18px;
+        font-weight: bold;
     }
     
+}
+.button--call{
+    box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.2);
+    background-image: linear-gradient(to bottom, #ffd21f, #e4751c);
+}
+.button--discount {
+    box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.2);
+    background-image: linear-gradient(to bottom, #a2d417, #4c9918);
+}
+
+
+.columns {
+    display:flex;
+    justify-content: center;
+    padding:0 20px;
+    text-align: center;
+    max-width:820px;
+    margin:0 auto;
+    
+    &__left{
+        width:390px;
+        margin-right: 100px;
+    }
+    &__right{
+        width:330px;
+        background:#fff;
+        border-radius: 5px;
+    }
+    &__item {
+        display:flex;
+        align-items: center;
+        padding:5px;
+        background:#ffd21f;
+        margin-bottom:15px;
+        border-radius: 100px/2px 10px 10px 100px/2px; 
+    }
+    &__circle {
+        min-width:70px;
+        height:70px;
+        border-radius: 50%;
+        background:#fff;
+        color:#ffd21f;
+        line-height: 70px;
+        font-size: 24px;
+        font-weight: bold;
+    }
+    &__plus{
+        margin-left:15px;
+        text-align: start;
+        color:#222;
+        font-size: 16px;
+    }
+}
+
+
+
+.discount{
+    padding:30px 35px;
+    &__parag{
+        font-size: 20px;
+        text-align:center;
+        color:#222;
+        margin-bottom: 18px;
+    }
+    &__row{
+        width:260px;
+        height:60px;
+        padding:0 15px;
+        border-radius: 5px;
+        background-color: #f7f7f7;
+        margin-bottom:15px; 
+        background: url(../img/phone.svg) no-repeat 220px center;
+    }
+}
+
+.user{
+    background: url(../img/user.svg) no-repeat 220px center;
+}
+.phone {
+    background: url(../img/phone.svg) no-repeat 220px center;
+}
+
+
+@media screen and (max-width:780px) {
+
+    html{
+        font-size:80%;
+    }
+    .header{
+        background:url('../img/header-img.jpg') no-repeat center top / cover;
+        &__top{
+            flex-direction: column;
+            align-items: center;
+        }
+        &__logo{
+            margin-bottom:47px;
+            margin-left:-40px;
+            width:84px;
+            height:45px;
+        }
+        &__title{
+            margin-bottom:25px;
+            margin-left: 0;
+            width:320px;
+        }
+    }
+    .columns{
+        flex-direction: column;
+        align-items: center;
+        &__left{
+            margin:0;
+        }
+    }
+ 
 }
