--- a/testForAdamant/app/css/main.css
+++ b/testForAdamant/app/css/main.css
@@ -83,6 +83,8 @@ html {
   border-radius: 5px;
   word-wrap: wrap none;
   cursor: pointer;
+  -webkit-box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.2);
+          box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.2);
 }
 .button__btn {
   text-decoration: none;
@@ -91,15 +93,11 @@ html {
   font-weight: bold;
 }
 .button--call {
-  -webkit-box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.2);
-          box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.2);
   background-image: -webkit-gradient(linear, left top, left bottom, from(#ffd21f), to(#e4751c));
   background-image: -o-linear-gradient(top, #ffd21f, #e4751c);
   background-image: linear-gradient(to bottom, #ffd21f, #e4751c);
 }
 .button--discount {
-  -webkit-box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.2);
-          box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.2);
   background-image: -webkit-gradient(linear, left top, left bottom, from(#a2d417), to(#4c9918));
   background-image: -o-linear-gradient(top, #a2d417, #4c9918);
   background-image: linear-gradient(to bottom, #a2d417, #4c9918);
@@ -113,13 +111,11 @@ html {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 0 20px;
-  text-align: center;
-  max-width: 820px;
+  padding: 0 20px 0 55px;
   margin: 0 auto;
 }
 .columns__left {
-  width: 390px;
+  width: 360px;
   margin-right: 100px;
 }
 .columns__right {
@@ -128,34 +124,35 @@ html {
   border-radius: 5px;
 }
 .columns__item {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 5px;
+  padding: 16px 28px 11px 50px;
+  text-align: start;
+  min-height: 70px;
   background: #ffd21f;
   margin-bottom: 15px;
-  border-radius: 50px 10px 10px 50px;
+  border-radius: 5px;
+  position: relative;
 }
 .columns__circle {
-  min-width: 70px;
+  width: 70px;
   height: 70px;
+  text-align: center;
   border-radius: 50%;
   background: #fff;
   color: #ffd21f;
-  line-height: 70px;
+  line-height: 60px;
+  border: 5px solid #ffd21f;
   font-size: 24px;
   font-weight: bold;
+  position: absolute;
+  top: 0;
+  left: -35px;
 }
 .columns__plus {
-  margin-left: 15px;
-  text-align: start;
   color: #222;
   font-size: 16px;
+}
+.columns__item:first-child {
+  line-height: 40px;
 }
 .discount {
   padding: 30px 35px;
@@ -173,7 +170,6 @@ html {
   border-radius: 5px;
   background-color: #f7f7f7;
   margin-bottom: 15px;
-  background: url(../img/phone.svg) no-repeat 220px center;
 }
 .user {
   background: url(../img/user.svg) no-repeat 220px center;
@@ -187,6 +183,7 @@ html {
   }
   .header {
     background: url('../img/header-img.jpg') no-repeat center top / cover;
+    height: 200vh;
   }
   .header__top {
     -webkit-box-orient: vertical;
@@ -223,5 +220,9 @@ html {
   }
   .columns__left {
     margin: 0;
+    width: 300px;
+  }
+  .columns__right {
+    width: 300px;
   }
 }
