--- a/testFMF/app/css/main.css
+++ b/testFMF/app/css/main.css
@@ -12,7 +12,7 @@ body {
   font-size: 1rem;
 }
 .row {
-  width: 65%;
+  max-width: 65%;
   margin: 0 auto;
 }
 a {
@@ -89,7 +89,6 @@ span {
           justify-content: space-between;
 }
 .navigation__wrap {
-  width: 100%;
   background: #55315e;
 }
 .navigation__link {
@@ -108,23 +107,83 @@ span {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: baseline;
+  -webkit-align-items: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  white-space: nowrap;
+  -webkit-flex-basis: 30%;
+      -ms-flex-preferred-size: 30%;
+          flex-basis: 30%;
 }
 .navigation__search {
   border-radius: 3px;
+  margin-left: 20px;
+  height: 20px;
+  -webkit-align-self: center;
+      -ms-flex-item-align: center;
+          align-self: center;
 }
 .navigation__container {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-align-self: center;
-      -ms-flex-item-align: center;
-          align-self: center;
 }
 .navigation__item:hover {
   background-color: #4a2554;
   -webkit-box-shadow: inset 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
           box-shadow: inset 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
+}
+.burger {
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  border-radius: 50%;
+  position: relative;
+  -webkit-box-shadow: inset 0 0 20px 2px rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0 0 20px 2px rgba(0, 0, 0, 0.3);
+  display: none;
+}
+.burger span,
+.burger span::before,
+.burger span::after {
+  width: 20px;
+  height: 2px;
+  background-color: #222;
+  position: absolute;
+  top: 50%;
+  margin-top: -1px;
+  left: 50%;
+  margin-left: -10px;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+.burger span::before {
+  content: '';
+  -webkit-transform: translateY(5px);
+      -ms-transform: translateY(5px);
+          transform: translateY(5px);
+}
+.burger span::after {
+  content: '';
+  -webkit-transform: translateY(-5px);
+      -ms-transform: translateY(-5px);
+          transform: translateY(-5px);
+}
+.burger--active span::before {
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.burger--active span::after {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+.burger--active span {
+  height: 0;
 }
 .section {
   display: -webkit-box;
@@ -173,4 +232,128 @@ span {
   border-radius: 5px;
   font-size: 1.0625rem;
   padding: 0.625rem 0.937rem;
+}
+@media screen and (max-width: 1125px) {
+  .row {
+    max-width: 85%;
+  }
+}
+@media screen and (max-width: 1040px) {
+  .navigation__container {
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .navigation__item {
+    border-left: none;
+    border-right: none;
+    border-top: 1px solid #653d70;
+    border-bottom: 2px solid #512b5a;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .navigation__search {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 800px) {
+  html {
+    font-size: 90%;
+  }
+  .header__top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .logo {
+    padding-left: 70px;
+  }
+  .contact__city {
+    margin-bottom: 0;
+    -webkit-align-self: center;
+        -ms-flex-item-align: center;
+            align-self: center;
+  }
+  .section {
+    display: block;
+    width: 100%;
+  }
+  .section__container2 {
+    display: none;
+  }
+  .navigation {
+    height: 0px;
+    overflow: hidden;
+    -webkit-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .navigation__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+  }
+  .navigation__item {
+    -webkit-flex-basis: 10%;
+        -ms-flex-preferred-size: 10%;
+            flex-basis: 10%;
+    padding: 20px;
+  }
+  .navigation__item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .burger {
+    display: block;
+    padding: 10px;
+  }
+  .navigation__wrap {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+}
+@media screen and (max-width: 460px) {
+  .contact__tel,
+  .contact__city {
+    font-size: 1.3rem;
+  }
+}
+@media screen and (max-width: 375px) {
+  .contact__tel,
+  .contact__city {
+    font-size: 0.9rem;
+  }
 }
